# esp-generate

./: .gitignore  .lychee.toml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  changelog.yml  ci.yml  linkcheck.yml
src/: cargo.rs  check.rs  chip_selector.rs  config.rs  lib.rs  main.rs  module_selector.rs  modules.rs  template.rs  template_embed.rs  toolchain.rs  tui.rs
template/: .clippy.toml  .dockerignore  .gitignore  .nvim.lua  CODING_AGENT_GUIDANCE.md  Cargo.toml  build.rs  diagram.json  flake.nix  rust-toolchain.toml  shell.nix  template.yaml  wokwi.toml
template/.cargo/: config.toml  esp-config.toml
template/.devcontainer/: Dockerfile  devcontainer.json
template/.github/workflows/: rust_ci.yml
template/.helix/: languages.toml
template/.template/: chip.yaml  module.yaml
template/.zed/: settings.json
template/esp-rs/: default.nix  riscv32-gcc.nix  rust.nix  xtensa-gcc.nix
template/scripts/: build.sh  flash.sh
template/src/: ble.rs  lib.rs
template/tests/: async_hello_test.rs  hello_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
