[package]
name         = "esp-generate"
version      = "0.4.0"
edition      = "2021"
rust-version = "1.86"
description  = "Template generation tool to create no_std applications targeting Espressif's chips"
repository   = "https://github.com/esp-rs/esp-generate"
license      = "MIT OR Apache-2.0"
keywords     = ["esp32", "template"]
categories   = ["command-line-utilities", "template-engine"]

include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src",
    "template",
]

[features]
default = ["update-informer"]
update-informer = ["dep:update-informer"]

[dependencies]
clap            = { version = "4.5.39", features = ["derive"] }
crossterm       = "0.29.0"
env_logger      = "0.11.8"
esp-metadata    = { version = "0.7.0", features = ["clap"] }
log             = "0.4.27"
ratatui         = { version = "0.29.0", features = ["crossterm", "unstable"] }
rhai            = "1.22.2"
taplo           = "0.14.0"
update-informer = { version = "1.2.0", optional = true }
serde           = { version = "1.0.219", features = ["derive"] }
serde_yaml      = "0.9.34+deprecated"

[build-dependencies]
quote   = "1.0.40"
walkdir = "2.5.0"
