[package]
name         = "esp-generate"
version      = "1.0.1"
edition      = "2024"
rust-version = "1.86"
description  = "Template generation tool to create no_std applications targeting Espressif's chips"
repository   = "https://github.com/esp-rs/esp-generate"
license      = "MIT OR Apache-2.0"
keywords     = ["esp32", "template"]
categories   = ["command-line-utilities", "template-engine"]

include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src",
    "template",
]

[features]
default = ["update-informer"]
update-informer = ["dep:update-informer"]

[dependencies]
anyhow          = "1.0.100"
strum           = "0.27.2"
inquire         = "0.9.1"
clap            = { version = "4.5.51", features = ["derive"] }
env_logger      = "0.11.8"
esp-metadata    = { version = "0.10.0", features = ["clap"] }
log             = "0.4.28"
ratatui         = { version = "0.29.0", features = ["crossterm", "unstable"] }
somni-expr      = "0.2.0"
taplo           = "0.14.0"
update-informer = { version = "1.3.0", optional = true }
serde           = { version = "1.0.228", features = ["derive"] }
serde_yaml      = "0.9.33"
toml_edit       = "0.23.7"

[build-dependencies]
quote   = "1.0.41"
walkdir = "2.5.0"
