[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow       = "1.0.93"
clap         = { version = "4.5.21", features = ["derive"] }
env_logger   = "0.11.5"
esp-metadata = { version = "0.5.0", features = ["clap"] }
esp-generate = { path = "..", default-features = false }
log          = "0.4.22"
tempfile     = "3.14.0"
serde_yaml   = "0.9"
