[package]
name    = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow       = "1.0.100"
clap         = { version = "4.5.49", features = ["derive"] }
env_logger   = "0.11.8"
esp-metadata = { version = "0.9.0", features = ["clap"] }
esp-generate = { path = "..", default-features = false }
log          = "0.4.28"
tempfile     = "3.23.0"
serde_yaml   = "0.9.33"
itertools    = "0.14.0"
